# lumina

./: .gitignore  Cargo.toml  README.md  nx.json  package-lock.json  package.json  tsconfig.json
.github/actions/: action.yml
.github/workflows/: lint-format.yml
cli/: Cargo.toml
cli/assets/: lumina.config.json
cli/src/: config.rs  errors.rs  main.rs  schemas.rs
cli/src/commands/: add_command.rs  build_command.rs  init_command.rs  mod.rs
cli/src/preflights/: add.rs  build.rs  init.rs  mod.rs
cli/src/schemas/: mod.rs  registry.rs  registry_item.rs  registry_item_file.rs  registry_type.rs
cli/src/util/: get_package_info.rs  get_package_manager.rs  get_project_info.rs  mod.rs  spinner.rs  step.rs
lib/: index.ts  theme.d.ts
lib/core/: LuminaContext.ts  LuminaProvider.tsx  index.ts
lib/core/color-scheme-managers/: index.ts  is-lumina-color-scheme.ts  memory-manager.ts
lib/functions/: index.ts  resolve_module_tree.ts  set_theme_derives.ts
lib/hooks/: index.d.ts  use-event.ts  use-lumina-color-scheme.ts  use-provider-color-scheme.ts  use-px.ts
registry/: components.json  themes.json
registry/components/avatar/: index.tsx
