[package]
name = "cli"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
thiserror = "2.0.16"
log = "0.4.27"
env_logger = "0.11.8"
indicatif = "0.18.0"
console = "0.16.0"
indicatif-log-bridge = "0.2.3"
serde_json = { version = "1.0.143", features = ["default"] }
serde = { version = "1.0.219", features = ["derive"] }
cfg-if = "1.0.3"
dialoguer = "0.12.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt", "net", "macros"] }

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
unsafe_code = "forbid"

[[bin]]
name = "lumina"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
